--- a/inline.css
+++ b/inline.css
@@ -1,9 +1,7 @@
-
-
 @charset "UTF-8";
 @-webkit-keyframes bg {
  0% {
-  background-color:##073642
+  background-color:#073642
  }
  100% {
   background-color:rgba(68,68,70,0)
@@ -167,10 +165,10 @@ button:not(.vk_app_modal_btn--deny):not(.podcast_snippet__play) {
  background-image:url(data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2214%22%20height%3D%2214%22%20viewBox%3D%220%200%2014%2014%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%3E%3Cdefs%3E%3Ccircle%20id%3D%22a%22%20cx%3D%227%22%20cy%3D%227%22%20r%3D%227%22%2F%3E%3C%2Fdefs%3E%3Cg%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%3E%3Cuse%20fill%3D%22%23333336%22%20xlink%3Ahref%3D%22%23a%22%2F%3E%3Ccircle%20cx%3D%227%22%20cy%3D%227%22%20r%3D%226.5%22%20stroke%3D%22%23666%22%2F%3E%3Ccircle%20cx%3D%227%22%20cy%3D%227%22%20r%3D%223%22%20fill%3D%22%23fff%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E)!important
 }
 #current_info {
- color:#FF0000!important
+ color:#!important
 }
 .profile_more_info_link {
- color:#FF0000!important
+ color:#FF0000000!important
 }
 .submit_post_box {
  background-color:#002b36	!important
@@ -200,7 +198,7 @@ button:not(.vk_app_modal_btn--deny):not(.podcast_snippet__play) {
  box-shadow:none!important
 }
 #side_bar ol li .left_row {
- color:#FF0000!important
+ color:#FF00000000!important
 }
 .left_count_wrap {
  background-color:#002b36!important;
