--- a/VkSolarized.user.css
+++ b/VkSolarized.user.css
@@ -3,7 +3,7 @@
 @description  Solarized theme for vk
 @namespace    https://github.com/wellWINeo/vk_solarized
 @homepageURL  https://github.com/wellWINeo/vk_solarized
-@updateURL    https://raw.githubusercontent.com/wellWINeo/vk_solarized/master/inline.css
+@updateURL    https://raw.githubusercontent.com/wellWINeo/vk_solarized/master/VkSolarized.user.css
 @supportURL   https://github.com/wellWINeo/vk_solarized
 @version      1.0
 @author       wellWINeo(vk.com/o__ni)
