--- a/VkSolarized.user.css
+++ b/VkSolarized.user.css
@@ -1,4 +1,4 @@
-/*  ==UserStyles==
+/*  ==UserStyle==
 @name         VkSolarized
 @description  Solarized theme for vk
 @namespace    https://github.com/wellWINeo/vk_solarized
